REL-136855 Allow IP jobs to be fully editable after run

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderFields.cshtml
@@ -4,7 +4,7 @@
 		<div class="field-row" data-bind="visible: !exportSource.ExportRdoMode()">
 			<div class="field-label required">Source:</div>
 			<div class="field-value">
-				<select id="sourceSelector" data-bind="options: ExportEnums.SourceOptions , optionsText: 'key', optionsValue: 'value',  optionsCaption: 'Select...', value: exportSource.TypeOfExport, disable: HasBeenRun(), select2: {}"></select>
+				<select id="sourceSelector" data-bind="options: ExportEnums.SourceOptions , optionsText: 'key', optionsValue: 'value',  optionsCaption: 'Select...', value: exportSource.TypeOfExport,  select2: {}"></select>
 			</div>
 		</div>
 		<div class="field-row" data-bind="visible: exportSource.IsFolderOrSubfolderSelected() && !exportSource.ExportRdoMode()">
@@ -23,26 +23,26 @@
 		<div class="field-row" data-bind="visible: exportSource.IsFolderOrSubfolderSelected()">
 			<div class="field-label required">Views:</div>
 			<div class="field-value">
-				<select id="viewSelector" data-bind="options: exportSource.AvailableViews, optionsText: 'name', optionsValue: 'artifactId', optionsCaption: 'Select...', value: exportSource.ViewId, disable: HasBeenRun(), select2: {}"></select>
+				<select id="viewSelector" data-bind="options: exportSource.AvailableViews, optionsText: 'name', optionsValue: 'artifactId', optionsCaption: 'Select...', value: exportSource.ViewId,  select2: {}"></select>
 			</div>
 		</div>
 		<div class="field-row" data-bind="visible: exportSource.IsSavedSearchSelected()">
 			<div class="field-label required">Saved Search:</div>
 			<div class="field-value">
-				<select id="savedSearchSelector" data-bind="options: exportSource.SavedSearches, optionsText: 'displayName', optionsValue: 'value', optionsCaption: 'Select...', value: exportSource.SavedSearchArtifactId, disable: HasBeenRun(), select2searchable: {}"></select>
-				<button id="saved-search-selection-button" data-bind="click: exportSource.OpenSavedSearchPicker, visible: !HasBeenRun()" class="actionButtonSmall">...</button>
+				<select id="savedSearchSelector" data-bind="options: exportSource.SavedSearches, optionsText: 'displayName', optionsValue: 'value', optionsCaption: 'Select...', value: exportSource.SavedSearchArtifactId,  select2searchable: {}"></select>
+				<button id="saved-search-selection-button" data-bind="click: exportSource.OpenSavedSearchPicker" class="actionButtonSmall">...</button>
 			</div>
 		</div>
 		<div class="field-row" data-bind="visible: exportSource.IsProductionSelected()">
 			<div class="field-label required">Production Set:</div>
 			<div class="field-value">
-				<select id="productionSetsSelector" data-bind="options: exportSource.ProductionSets, optionsText: 'displayName', optionsValue: 'artifactID', optionsCaption: 'Select...', value: exportSource.ProductionId, disable: HasBeenRun(), select2: {}"></select>
+				<select id="productionSetsSelector" data-bind="options: exportSource.ProductionSets, optionsText: 'displayName', optionsValue: 'artifactID', optionsCaption: 'Select...', value: exportSource.ProductionId,  select2: {}"></select>
 			</div>
 		</div>
 		<div class="field-row">
 			<div class="field-label required">Start Export at Record:</div>
 			<div class="field-value">
-				<input id="start-export-at-record" type="number" min="1" data-bind="value: startExportAtRecord, disable: HasBeenRun()" />
+				<input id="start-export-at-record" type="number" min="1" data-bind="value: startExportAtRecord" />
 			</div>
 		</div>
 	</div>
@@ -52,13 +52,13 @@
 		<div class="table" id="selectFields">
 			<div class="cell fixedColumn">
 				<div class="field-label" style="padding: 5px; text-align: left;">Source Fields:</div>
-				<select id="available-fields" class="list-box" name="available-field" data-bind="options: availableFields, selectedOptions: selectedAvailableFields, optionsText: 'displayName', doubleClick: addField, disable: $parent.HasBeenRun, optionsAfterRender: setTitle" multiple="multiple"></select>
+				<select id="available-fields" class="list-box" name="available-field" data-bind="options: availableFields, selectedOptions: selectedAvailableFields, optionsText: 'displayName', doubleClick: addField, optionsAfterRender: setTitle" multiple="multiple"></select>
 			</div>
 			<div class="cell selection-rename">
 				<div class="field-row">
 					<button class="actionButtonSmall" style="visibility:hidden" id="fake-btn">Rename</button>
 				</div>
-				<div class="field-row map-move" style="margin-top: 150%;" data-bind="visible: !$parent.HasBeenRun()">
+				<div class="field-row map-move" style="margin-top: 150%;">
 					<a href="#" id="add-all-fields" class="icon-move-last" data-bind="click: addAllFields"></a>
 					<a href="#" id="add-field" class="icon-move-next" data-bind="click: addField"></a>
 					<a href="#" id="remove-field" class="icon-move-previous" data-bind="click: removeField"></a>
@@ -67,13 +67,13 @@
 			</div>
 			<div class="cell fixedColumn">
 				<div class="field-label" style="padding: 5px; text-align: left; border-left: 3px solid #f59d1f;">Selected Fields:</div>
-				<select class="list-box" id="selected-fields" data-bind="options: mappedFields, selectedOptions: selectedMappedFields, optionsText: 'displayName', doubleClick: removeField, disable: $parent.HasBeenRun, optionsAfterRender: setTitle" multiple="multiple"></select>
+				<select class="list-box" id="selected-fields" data-bind="options: mappedFields, selectedOptions: selectedMappedFields, optionsText: 'displayName', doubleClick: removeField, optionsAfterRender: setTitle" multiple="multiple"></select>
 			</div>
 			<div class="cell selection-rename">
 				<div class="field-row">
 					<button class="actionButtonSmall" id="renamed-fields-button" data-bind="click: openRenamedFieldsModal, hidden: isRenameButtonHidden">Rename</button>
 				</div>
-				<div class="field-row map-move" style="margin-top: 150%" data-bind="visible: !$parent.HasBeenRun()">
+				<div class="field-row map-move" style="margin-top: 150%">
 					<a href="#" id="move-field-top" class="icon-move-to-top" data-bind="click: moveFieldTop"></a>
 					<a href="#" id="move-field-up" class="icon-move-up" data-bind="click: moveFieldUp"></a>
 					<a href="#" id="move-field-down" class="icon-move-down" data-bind="click: moveFieldDown"></a>
@@ -82,7 +82,7 @@
 			</div>
 			<div class="cell fixedColumn">
 				<div class="field-label" style="padding: 5px; text-align: left; ">Renamed Fields:</div>
-				<select class="list-box" id="renamed-fields" data-bind="options: mappedFields, selectedOptions: selectedMappedFields, optionsText: 'renamedText', doubleClick: openRenamedFieldsModal, disable: $parent.HasBeenRun, optionsAfterRender: setTitle" multiple="multiple"></select>
+				<select class="list-box" id="renamed-fields" data-bind="options: mappedFields, selectedOptions: selectedMappedFields, optionsText: 'renamedText', doubleClick: openRenamedFieldsModal, optionsAfterRender: setTitle" multiple="multiple"></select>
 			</div>
 		</div>
 	</div>
