Create File Name options Modal

--- a/Source/kCura.IntegrationPoints.Web/Views/Modals/ExportFileNamingOptionView.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/Modals/ExportFileNamingOptionView.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="popupTitle">File Naming Options</div>
-<div class="card" style="min-width: 400px;">
+<div class="card" style="min-width: 750px">
 	<div class="field-value" id="fileNamingContainer">
 		<div data-bind="foreach: visibilityValuesContainer">
 			<div class="field-value" data-bind="visible: $data">
