REL-154280 enabled user select for inputs to resolve safari problem

--- a/source/kCura.IntegrationPoints.Web/Content/import.css
+++ b/source/kCura.IntegrationPoints.Web/Content/import.css
@@ -80,7 +80,7 @@
 	user-select: none;
 }
 
-.ui-dialog * {
+.ui-dialog *, input {
     -moz-user-select: auto;
     -webkit-user-select: auto;
     -ms-user-select: auto;
