--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/RelativityProviderConfiguration.cshtml
@@ -134,6 +134,7 @@
     <script src="~/Scripts/integration-point/picker.js"></script>
     <script src="~/Scripts/integration-point/tooltip-definitions.js"></script>
     <script src="~/Scripts/integration-point/tooltip-view-model.js"></script>
+	<script src="~/Scripts/export/saved-search-flat.js"></script>
 	<script src="~/Scripts/export/saved-search-picker.js"></script>
 	<script src="~/Scripts/export/export-enums.js"></script>
 	<script src="~/Scripts/RelativityProvider/Relativity-provider.js"></script>
