clear selected Fileshare aftere selecting different PSL

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -60,14 +60,18 @@
 		<tr>
 			<td style="width: 48%;">
 				<div class="field-row">
-					<div class="field-row">
-						<div class="field-label required">
-							Export Location:
-						</div>
-						<div class="field-value select2-double-width">
-							<select class="fluid-mock-select" id="processingSources" data-bind="optionsText: 'location', optionsValue: 'artifactId', options: ProcessingSourceLocationList, optionsCaption: 'Select...', value: ProcessingSourceLocation, select2: { width: '100%' }"></select>
-						</div>
+					<div class="field-label required">
+						Export Location:
 					</div>
+					<div class="field-value select2-double-width">
+						<select class="fluid-mock-select" id="processingSources" data-bind="optionsText: 'location', optionsValue: 'artifactId', options: ProcessingSourceLocationList, optionsCaption: 'Select...', value: ProcessingSourceLocation, select2: { width: '100%' }"></select>
+					</div>
+				</div>
+			</td>
+		</tr>
+		<tr>	
+			<td style="width: 48%;">
+				<div class="field-row">
 					<div class="field-label required">
 						Destination Folder:
 					</div>
