changed 'export location' to 'destination location' & adding fileshare at the beginning of locations

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -61,7 +61,7 @@
 			<td style="width: 48%;">
 				<div class="field-row">
 					<div class="field-label required">
-						Export Location:
+						Destination Location:
 					</div>
 					<div class="field-value select2-double-width">
 						<select class="fluid-mock-select" id="processingSources" data-bind="optionsText: 'location', optionsValue: 'artifactId', options: exportDestinationLocationViewModel.ProcessingSourceLocationList, optionsCaption: 'Select...', value: exportDestinationLocationViewModel.ProcessingSourceLocation, select2searchable: { width: '100%' }"></select>
