--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -57,7 +57,7 @@
 				</div>
 			</td>
 		</tr>
-		<tr>
+		<tr data-bind="visible: exportDestinationLocationViewModel.IsProcessingSourceLocationEnabled">
 			<td style="width: 48%;">
 				<div class="field-row">
 					<div class="field-label required">
