displaying valiation message for destination folder in proper place

--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -83,6 +83,7 @@
 						<div id="jstree-holder-div" class="jstree-holder browse" hidden="hidden">
 							<div id="browser-tree" tabindex="0"></div>
 						</div>
+						<div><span class="icon-error legal-hold field-validation-error" data-bind="validationMessage: exportDestinationLocationViewModel.Fileshare"></span></div>
 					</div>
 				</div>
 			</td>
