--- a/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
+++ b/source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/ExportProviderSettings.cshtml
@@ -77,13 +77,13 @@
 					</div>
 					<div class="field-value select2-double-width">
 						<div id="location-select" class="select2-container fluid-mock-select filter-container">
-							<input id="location-input" type="text" readonly='readonly' placeholder="Select..." data-bind="value: exportDestinationLocationViewModel.fileShareDisplayText()" />
+							<input id="location-input" type="text" readonly='readonly' placeholder="Select..." data-bind="value: exportDestinationLocationViewModel.selectedFolderDisplayText()" />
 							<span id="location-span" class="icon legal-hold icon-chevron-down" role="presentation"></span>
 						</div>
 						<div id="jstree-holder-div" class="jstree-holder browse" hidden="hidden">
 							<div id="browser-tree" tabindex="0"></div>
 						</div>
-						<div><span class="icon-error legal-hold field-validation-error" data-bind="validationMessage: exportDestinationLocationViewModel.Fileshare"></span></div>
+						<div><span class="icon-error legal-hold field-validation-error" data-bind="validationMessage: exportDestinationLocationViewModel.DestinationFolder"></span></div>
 					</div>
 				</div>
 			</td>
