Change the only Custodian text in RIP UI to Entity

--- a/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/IntegrationPoints/_IntegrationMapFields.cshtml
@@ -158,7 +158,7 @@
 						</div>
 						<div class="field-row" data-bind="visible: showManager">
 							<div class="field-label required ">
-								Custodian Manager<br />
+								Entity Manager<br />
 								Contains Link:
 							</div>
 							<div class="field-value">
