Fix issues after jQuery and jQuery-UI upgrade

--- a/Source/kCura.IntegrationPoints.Web/Content/modals.css
+++ b/Source/kCura.IntegrationPoints.Web/Content/modals.css
@@ -39,6 +39,9 @@
     box-shadow: none;
 }
 
+.ui-dialog.ui-widget-content.no-border {border: 0;
+}
+
 .ui-widget-content .card {
     border: none;
     box-shadow: none;
