use local 'Open Sans' font in _StepLayout.cshtml

--- a/Source/kCura.IntegrationPoints.Web/Views/Shared/_StepLayout.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/Shared/_StepLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<link href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css" />
+	<link href="~/Content/fonts/open-sans-v15-latin-regular.css" rel="stylesheet" type="text/css" />
 	<title>@ViewBag.Title</title>
 	@Styles.Render("~/Content/styles")
     <link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet" />
