--- a/Source/kCura.IntegrationPoints.Web/Views/Shared/_Layout.cshtml
+++ b/Source/kCura.IntegrationPoints.Web/Views/Shared/_Layout.cshtml
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<link href="~/Content/fonts/open-sans-v15-latin-regular.css" rel="stylesheet" type="text/css" />
+	@Styles.Render("~/Content/fonts/bundleFonts")
 	<title>@ViewBag.Title</title>
 	@Styles.Render("~/Content/themes/base/css")
 	@Styles.Render("~/Content/styles")
 	<link href="~/Content/buttermilk.9_2.min.css" rel="stylesheet" />
 	<link href="~/Content/themes/default/style.min.css" rel="stylesheet" />
-    	<link href="~/Content/jstree-fluid.css" rel="stylesheet" />
-    	<link href="~/Content/modals.min.css" rel="stylesheet" />
+	<link href="~/Content/jstree-fluid.css" rel="stylesheet" />
+	<link href="~/Content/modals.min.css" rel="stylesheet" />
 	@Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
